@@ -150,4 +150,8 @@
     <cvs-directory>gnome-netstatus/help</cvs-directory>
   </module>
 
+  <module id="gucharmap">
+    <cvs-directory>gucharmap/help</cvs-directory>
+  </module>
+
 </gnomedocs>
