@@ -1,3 +1,7 @@
+2005-08-20  Danilo Šegan  <danilo@gnome.org>
+
+	* modules.xml: Added gucharmap.
+
 2005-08-19  Danilo Šegan  <danilo@gnome.org>
 
 	* modules.xml: Add release-notes.
